--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,25 +10,25 @@ on:
     branches: [ main ]
 
 jobs:
-  UnitTest:
-    runs-on: ubuntu-latest
+  # UnitTest:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout Repo
+  #       uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: '3.10'
 
-      - name: Install Requirements
-        run:  pip install flask coverage pytest flask-wtf
+  #     - name: Install Requirements
+  #       run:  pip install flask coverage pytest flask-wtf
 
-      - name: Unit Test
-        run: |
-          coverage run -m pytest test.py
-          coverage xml app.py
+  #     - name: Unit Test
+  #       run: |
+  #         coverage run -m pytest test.py
+  #         coverage xml app.py
 
 
   Build:
