--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Autenticao no GCP
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
           
