--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,8 +49,8 @@ jobs:
         env: 
           ARTIFACT_REGISTRY: ${{ secrets.ARTIFACT_REGISTRY }}
         run: | 
-          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/backend:atest .
-          docker push ${{ secrets.ARTIFACT_REGISTRY }}/backend:latest
+          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/myapp:atest .
+          docker push ${{ secrets.ARTIFACT_REGISTRY }}/myapp:latest
 
   Deploy:
     needs: Build
@@ -70,10 +70,10 @@ jobs:
       - name: Deploy no Cloud Run
         id: deploy
         run: |-
-          gcloud run deploy backend \
+          gcloud run deploy myapp \
             --quiet \
             --region ${{ secrets.GOOGLE_REGION }} \
-            --image ${{ secrets.ARTIFACT_REGISTRY }}/backend:latest \
+            --image ${{ secrets.ARTIFACT_REGISTRY }}/myapp:latest \
             --platform managed \
             --set-env-vars CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }}, CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }}, CLOUD_SQL_USERNAME=${{ secrets.CLOUD_SQL_USERNAME }}, CLOUD_SQL_PASSWORD=${{ secrets.CLOUD_SQL_PASSWORD }}, DB_LOCAL_HOST=${{ secrets.DB_LOCAL_HOST }},
             --allow-unauthenticated \
