--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -77,7 +77,7 @@ jobs:
             --platform managed \
             --set-env-vars CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }},CLOUD_SQL_DATABASE_NAME=${{ secrets.CLOUD_SQL_DATABASE_NAME }},CLOUD_SQL_USERNAME=${{ secrets.CLOUD_SQL_USERNAME }},CLOUD_SQL_PASSWORD=${{ secrets.CLOUD_SQL_PASSWORD }},DB_LOCAL_HOST=${{ secrets.DB_LOCAL_HOST }} \
             --allow-unauthenticated \
-            --add-cloud-instances ${{ secrets.CLOUD_SQL_CONNECTION_NAME }} \
+            --add-cloudsql-instances ${{ secrets.CLOUD_SQL_CONNECTION_NAME }} \
             --project ${{ secrets.GOOGLE_PROJECT_ID }} \
             --format json
       
